<resources>
    <string name="app_name">FEE TRACKER PLUS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_birthdate">Select date of admission</string>
    <string name="Date">Date</string>
    <string name="FeesPaid">Fees Paid</string>
    <string name="Balance">Balance</string>
    <string name="Subject">Subject</string>
    <string name="Bal">Balance :</string>
    <string name="Remark">Remark :-</string>
    <string name="AddFee">Add Fee Record</string>
    <string name="EditFee">Edit Fee Record</string>
    <string name="full_name">Full Name</string>
    <string name="change_Password">Change Password</string>
    <string name="email_id">Email id</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="account_exp">Account Expiration</string>
    <string name="update_profile">Update Profile</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="define_class">Define A Class</string>
    <string name="branch">Branches / Location</string>
    <string name="Level">Level /Standard</string>
    <string name="subject">Subject /Styles</string>
    <string name="batch">Batches (Ex: Morning/Evening)</string>
    <string name="addloc">Add All Locations</string>
    <string name="addlevel">Add All Levels</string>
    <string name="addsubj">Add All Subjects</string>
    <string name="addbatch">Add All Batches</string>
    <string name="title_activity_activity_profile">Activity_profile</string>
    <string name="title_activity_product_profile">ProductTour3Activity</string>
    <string name="info_1text1">FEE</string>
    <string name="info_1text2">MANAGEMENT</string>
    <string name="info_1text3">Was not that easy before...</string>
    <string name="info_2text1">EASY</string>
    <string name="info_2text2">"COMMUNICATION &#038; ATTENDANCE"</string>
    <string name="info_2text3">MANAGEMENT</string>
    <string name="info_3text1">ONE-CLICK</string>
    <string name="info_3text2">"BACKUP &#038; RESTORE"</string>
    <string name="info_3text3">FACILITY</string>
    <string name="title_activity_acticity__profile_main">Acticity_Profile_main</string>
    <string name="title_activity_activity_class_profile">Activity_class_profile</string>
    <string name="title_activity_activity_profile_new">Activity_profileNew</string>
    <string name="title_activity_click">ClickActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_click_activity2">Click_activity2</string>
    <string name="title_activity_click__step_">Click_Step_Activity</string>
    <string name="info_1">Enter your coaching class details in <strong>Class Profile</strong>. Enter all Branch or location names , all Standards or styles (for example XII, beginner , Advance etc.) , all Batch names (for example morning , evening, 9.00 to 10.00 etc), all subject names (for example Maths , Zumba , Violin , Table Tennis etc). <p> Then define fees for each subject.</p>\n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_2">Enroll the students for respective batches in <strong>Student Management</strong> section. You can edit or delete any students later.\n\t\t\t\t\t\t\t\t<strong>Next...</strong> </string>
    <string name="info_3"> In <strong>Send SMS</strong> section, you can select individual student and/or parent for sending customized text message.\n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_4"> In <strong>Fees Management</strong> section, you can enter fees installments of each student .The summary report will help you analyze branch wise , batch wise balance fees.\n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_5"> In <strong>Backup and Restore</strong> section, you can upload the student records on our secure server. The data is saved in encrypted format. In case you loose your phone or accidentally app is deleted from your mobile then you can retrieve the data from the server. <p>There is facility of uploading student records in excel format directly on the server. By restore option the student records can be bought from server to your mobile app.</p>\n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_6"> In <strong>Attendance</strong> section, you can mark presenty of each student. Text SMS can be sent to absent student/parent. RED mark near student name indicates unpaid balance.\n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_cls1">You can change your password from this page. \n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_cls2">Enter all branches or location names , all batch names , all standards/styles and all subjects here.\n\n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_cls3"> Define fees for the selected  subjects . <strong>Students will be admitted only to those subjects for which fees is defined.</strong>\n\t\t\t\t\t\t\t\t<strong>Next...</strong></string>
    <string name="info_cls4">App generates all combination of batches considering all branches , subjects , standards etc. You need to select only those batches which are active.\n\t\t\t\t\t\t\t\tNext...</string>
    <string name="title_activity_add_student">Add Student</string>
    <string name="title_activity_add__fee">Add Fee</string>
    <string name="title_activity_send_sms">Send Text SMS</string>
    <string name="title_activity_add_attendance">Add Attendance</string>
    <string name="title_activity_teacher_homework">Teacher Homework</string>
    <string name="title_activity_backup">Backup</string>
    <string name="title_activity_backup__new">Backup_New</string>
    <string name="title_activity_error">Error</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="login_username">User Name:</string>
    <string name="login_Password">Password :</string>
    <string name="login_ShowPassword">Show Password </string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all">Clear past attendance records</string>
    <string name="RegisterForTrial">Register For Trial </string>
    <string name="forgotpassword">Forgot Password </string>
    <string name="Registration">Registration</string>
    <string name="eneter_class_name">Enter Class Name"</string>
    <string name="EnterEmailID">Enter EmailID</string>
    <string name="EnterContactNo">Enter Contact No.</string>
    <string name="Enteraddress">Enter Address</string>
    <string name="Entercity">Enter City </string>
    <string name="description">Enter description about your Institute </string>
    <string name="classprofile">CLASS PROFILE</string>
    <string name="feemanagent">FEE MANAGEMENT"</string>
    <string name="sendsms">SEND TEXT SMS</string>
    <string name="studmanagement">STUDENT MANAGEMENT</string>
    <string name="backup">BACKUP &#038; RESTORE</string>
    <string name="attendance">ATTENDANCE </string>
    <string name="attendance_subject_for">Attendance Subject for</string>
    <string name="send_without_sms">Send Without SMS</string>
    <string name="send_with_sms">Send With SMS</string>
    <string name="dear">Dear </string>
    <string name="you_are_absent">,\nYou are absent for todays  </string>
    <string name="session"> session.</string>
    <string name="enter_student_id">Enter Student Roll No/ID</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_parent_phone">Enter Parent Phone No</string>
    <string name="enter_student_phone">Enter Student Phone No</string>
    <string name="enter_date_of_admission">Enter Date of Admission</string>
    <string name="enter_initial_payment">Enter Initial Payment</string>
    <string name="submit">Submit</string>
    <string name="class_profile">Class Profile</string>
    <string name="send_sms">Send TEXT SMS</string>
    <string name="student_management">Student Management</string>
    <string name="get_backup">Backup &#038; Restore</string>
    <string name="attendance_m">Attendance </string>
    <string name="fee_management">Fee Management</string>
    <string name="Class_profile">Class profile</string>
    <string name="activate_batches">Activate Batches</string>
    <string name="define_fees">Save and Define Fees</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="student_list">Student List</string>
    <string name="enter_notice">Click to enter message...</string>
    <string name="char_count">Char Count :0   Message Count :1</string>
    <string name="do_not_send">Do Not Send</string>
    <string name="send_sms_via_mobile">Send Text SMS Via Mobile</string>
    <string name="send_sms_via_server">Send Text SMS Via Server</string>
    <string name="send_sms_selective">Send Sms Selective</string>
    <string name="send">Send</string>
    <string name="branch_name">Branch Name :</string>
    <string name="standard_name">Standard Name :</string>
    <string name="batch_name">Batch Name :</string>
    <string name="subject_name">Subject Name :</string>
    <string name="add_fee">Add Fee</string>
    <string name="enter_fees_amount">Enter Fee Amount</string>
    <string name="payment_status">Payment Type :</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="online">Online</string>
    <string name="enter_cheque_number">Enter cheque number</string>
    <string name="enter_remark">Enter remark</string>
    <string name="collect_fee">Update fee record</string>
    <string name="Cancel">Cancel</string>
    <string name="roll_no">Roll No.</string>
    <string name="student_name">Student Name</string>
    <string name="search">Search</string>
    <string name="view_fee_summary">View Fee Summary</string>
    <string name="fee_summary">Fee Summary</string>
    <string name="total">Total</string>
    <string name="received">Received :</string>
    <string name="balance">Balance :</string>
    <string name="Branch">Branch</string>
    <string name="Standard">Standard</string>
    <string name="Batch">Batch</string>
    <string name="Total">Total</string>
    <string name="Received">Received</string>
    <string name="total_fee">Total Fee</string>
    <string name="Total_fee">Total Fee</string>
    <string name="enter_fee">Enter Fee</string>
    <string name="backup_text">It will transfer the records from your mobile phone to server. It will take several minute. Please click on submit  button to continue...</string>
    <string name="class_config_backup">Class configuration backup</string>
    <string name="student_backup">Student\'s records backup</string>
    <string name="fee_backup">Fee backup</string>
    <string name="attendance_backup">Attendance backup</string>
    <string name="restore_text">It will delete all records from your mobile phone and restore from server. It will take several minute. Please click submit button to continue...</string>
    <string name="class_config_restore">Class configuration  restore</string>
    <string name="student_restore">Student\'s records restore</string>
    <string name="fee_restore">Fee Restore</string>
    <string name="attendance_restore">Attendance Restore</string>
    <string name="class_mgmt">FEE TRACKER PLUS</string>
    <string name="Send_SMS">Send SMS</string>
    <string name="Parent">Parent</string>
    <string name="Student">Student</string>
    <string name="Student_list">Student List</string>
    <string name="Absent">Absent</string>
    <string name="Present">Present</string>
    <string name="Student_Name">Student Name</string>
    <string name="subs">Subjects</string>
    <string name="pay_status">Payment Status</string>
    <string name="view_summary">Fees Summary Report</string>
    <string name="EditAndAddFeeRecord">Add and Edit Fee Record</string>
</resources>