<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_dash">

    <include
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />


    <LinearLayout
        android:id="@+id/relative"
        android:layout_below="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/sname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:textSize="16sp"
            android:text="@string/Student_Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_color75" />
        <LinearLayout
          android:layout_height="wrap_content"
         android:layout_width="fill_parent"
            android:weightSum="90"
         android:orientation="horizontal">
        <TextView
            android:id="@+id/standard"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_40"
            android:layout_weight="30"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Standard"
            android:textSize="16sp"
            android:textColor="@color/black_color75" />

        <TextView
            android:id="@+id/subjects"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_40"
            android:layout_weight="30"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/subs"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_color75" />

        <TextView
            android:id="@+id/totalFee"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_40"
            android:layout_weight="30"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Total_fee"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_color75" />

    </LinearLayout>
        </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="250dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/TableLayout1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"

                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/PlannedDate"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:background="@color/yellow"
                        android:gravity="center"
                        android:text="@string/Date"
                        android:textColor="@color/black_color75"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/FeesPaid"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"

                        android:background="@color/yellow"
                        android:gravity="center"
                        android:text="@string/FeesPaid"
                        android:textColor="@color/black_color75"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Balance"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"

                        android:background="@color/yellow"                        android:gravity="center"
                        android:text="@string/Balance"
                        android:textColor="@color/black_color75"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/sub"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"

                        android:background="@color/yellow"
                        android:gravity="center"
                        android:text="@string/pay_status"
                        android:textColor="@color/black_color75"
                        android:textSize="16sp" />
                </TableRow>


            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bal"
                    android:textColor="@color/black_color75"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/remark_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remark"
                    android:textColor="@color/black_color75"
                    android:textSize="20sp" />
            </LinearLayout>

            <!--Free Fees Button-->
            <LinearLayout
                android:id="@+id/lin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2"
                android:visibility="gone"
                >

                <Button
                    android:id="@+id/editfee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_book_service_yellow"
                    android:text="@string/EditFee"
                    android:textColor="@color/button_text_color"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/addfee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_book_service_yellow"
                    android:text="@string/AddFee"
                    android:textColor="@color/button_text_color"
                    android:textSize="13sp" />

            </LinearLayout>


            <!--Buy Layout-->
            <LinearLayout
                android:id="@+id/llBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_book_service_yellow"
                    android:text="@string/EditAndAddFeeRecord"
                    android:textColor="@color/button_text_color"
                    android:textSize="13sp" />
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>